--- a/frontend/views/Component/landingpage.handlebars
+++ b/frontend/views/Component/landingpage.handlebars
@@ -17,7 +17,8 @@
       <p class="title wow fadeIn">Unlimited Books,</p>
       <p class="title wow fadeIn">Novels, and more.</p>
 		  <p class="subtitle wow fadeIn" data-wow-delay=".7s">Buy anywhere. Cancel anytime.</p>
-      <a class="btn_signup wow fadeIn" data-wow-delay=".7s" href="/user/signup">Sign up</a>
+      <a class="btn_signup wow fadeIn" data-wow-delay=".7s" href="/user/signup">Sign up</a><br>
+        <a class="btn_about wow fadeIn" data-wow-delay=".7s" href="/about">Learn More!</a>
 	</div>
 	<div class="section" id="section1">
         <section class="flex-center">
